Removed repetitive code to make dataset generation more efficient

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "7610f358-c488-4391-89e1-f8ad76a65788",
    "metadata": {
     "tags": []
@@ -18,14 +18,9 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import Dataset, DataLoader, Subset\n",
+    "from torch.utils.data import Dataset\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from scipy.ndimage import gaussian_filter\n",
-    "import math\n",
     "import os\n",
     "import pandas as pd\n",
     "import random"
@@ -33,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "9ac82bd6-47e4-4e3f-9352-42f936019bce",
    "metadata": {
     "tags": []
@@ -44,123 +39,59 @@
     "    def __init__(self, size, full_dem, baselines, wavelength, S_max=5.0, D=50, nu=0.25, cm=1.0, V=1.0,\n",
     "                 random_noise_std=0.56, tropospheric_noise_beta=1.82, tropospheric_noise_scale=1.0,\n",
     "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending'):\n",
+    "        \n",
+    "        # Size of image\n",
     "        self.size = size\n",
+    "\n",
+    "        # Time & Angle parameters\n",
+    "        self.total_days = total_days\n",
+    "        self.interval_days = interval_days\n",
+    "        self.orbit_type = orbit_type\n",
+    "        self.incidence_angle_deg, self.satellite_azimuth_deg = self._get_orbit_geometry()\n",
+    "        self.los_vector = Noise2NoiseDataset.calculate_los_vector(self.incidence_angle_deg, self.satellite_azimuth_deg)\n",
+    "        self.times = self.get_times()\n",
+    "\n",
+    "        # Subsidence Parameters\n",
     "        self.S_max = S_max\n",
     "        self.D = D\n",
     "        self.nu = nu\n",
     "        self.cm = cm\n",
     "        self.V = V\n",
+    "        self.delta_P_final = -self.S_max * ((np.pi * self.D**2) / (self.cm * (1 - self.nu) * self.V))\n",
+    "        self.r, self.subsidence_denominator, self.azimuth = Noise2NoiseDataset._generate_subsidence_constants(size, D)\n",
+    "        self.f_t = f_t\n",
+    "\n",
+    "        # Guassian noise parameters\n",
     "        self.random_noise_std = random_noise_std\n",
+    "\n",
+    "        # Tropospheric noise parameters\n",
     "        self.tropospheric_noise_beta = tropospheric_noise_beta\n",
     "        self.tropospheric_noise_scale = tropospheric_noise_scale\n",
-    "        self.total_days = total_days\n",
-    "        self.interval_days = interval_days\n",
-    "        self.f_t = f_t\n",
-    "        self.orbit_type = orbit_type\n",
+    "        self.power_array = Noise2NoiseDataset._calculate_power_array(size, tropospheric_noise_beta)\n",
+    "\n",
+    "        # Topographic noise parameters\n",
     "        self.baselines = baselines\n",
     "        self.wavelength = wavelength\n",
-    "\n",
     "        self.full_dem = full_dem\n",
-    "\n",
-    "        self.incidence_angle_deg, self.satellite_azimuth_deg = self._get_orbit_geometry()\n",
-    "        self.times = self.get_times()\n",
-    "        \n",
-    "        if len(self.times) == 0:\n",
-    "            self.total_time = 1.0\n",
-    "        elif len(self.times) == 1:\n",
-    "             self.total_time = self.times[0] if self.times[0] > 0 else 1.0\n",
-    "        else:\n",
-    "            self.total_time = self.times[-1] if self.times[-1] > 0 else 1.0\n",
-    "        if self.total_time <=0: self.total_time = 1.0\n",
+    "        SLANT_RANGE = 850000\n",
+    "        self.topographic_denominator = self.wavelength * SLANT_RANGE * np.sin(np.deg2rad(self.incidence_angle_deg))\n",
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.times)\n",
     "\n",
-    "    def generate_random_noise(self):\n",
-    "        return np.random.normal(loc=0.0, scale=self.random_noise_std, size=self.size)\n",
-    "\n",
-    "    def generate_tropospheric_noise(self):\n",
-    "        noise = np.fft.fft2(np.random.randn(*self.size))\n",
-    "        ky = np.fft.fftfreq(self.size[0])\n",
-    "        kx = np.fft.fftfreq(self.size[1])\n",
-    "        kx, ky = np.meshgrid(kx, ky)\n",
-    "        k = np.sqrt(kx**2 + ky**2)\n",
-    "        k[0, 0] = 1e-7\n",
-    "        power = k ** (-self.tropospheric_noise_beta)\n",
-    "        frac_noise = np.fft.ifft2(noise * power).real\n",
-    "        std_val = frac_noise.std()\n",
-    "        if std_val > 1e-9:\n",
-    "            frac_noise = (frac_noise - frac_noise.mean()) / std_val\n",
-    "        else:\n",
-    "            frac_noise = frac_noise - frac_noise.mean()\n",
-    "        return frac_noise * self.tropospheric_noise_scale\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def calculate_los_vector(incidence_angle_deg, satellite_azimuth_deg):\n",
-    "        incidence_angle_rad = np.deg2rad(incidence_angle_deg)\n",
-    "        satellite_azimuth_rad = np.deg2rad(satellite_azimuth_deg)\n",
-    "        look_azimuth_rad = satellite_azimuth_rad + np.pi/2\n",
-    "        l_east = np.sin(incidence_angle_rad) * np.sin(look_azimuth_rad)\n",
-    "        l_north = np.sin(incidence_angle_rad) * np.cos(look_azimuth_rad)\n",
-    "        l_up = np.cos(incidence_angle_rad)\n",
-    "        return np.array([l_east, l_north, l_up])\n",
-    "\n",
     "    def generate_subsidence(self, delta_P):\n",
-    "        y, x = np.indices(self.size)\n",
-    "        cx, cy = self.size[1] // 2, self.size[0] // 2\n",
-    "        r_sq = (x - cx)**2 + (y - cy)**2\n",
-    "        r = np.sqrt(r_sq)\n",
     "        factor = (-1 / np.pi) * self.cm * (1 - self.nu) * delta_P * self.V\n",
-    "        denominator_base = r**2 + self.D**2\n",
-    "        denominator_base[denominator_base < 1e-9] = 1e-9\n",
-    "        uz = factor * (self.D / (denominator_base**1.5))\n",
-    "        ur = factor * (r / (denominator_base**1.5))\n",
-    "        azimuth = np.arctan2(y - cy, x - cx)\n",
-    "        ux = ur * np.cos(azimuth)\n",
-    "        uy = ur * np.sin(azimuth)\n",
-    "        los_vector_calc = Noise2NoiseDataset.calculate_los_vector(self.incidence_angle_deg, self.satellite_azimuth_deg)\n",
+    "        uz = factor * (self.D / (self.subsidence_denominator**1.5))\n",
+    "        ur = factor * (self.r / (self.subsidence_denominator**1.5))\n",
+    "        ux = ur * np.cos(self.azimuth)\n",
+    "        uy = ur * np.sin(self.azimuth)\n",
+    "        los_vector_calc = self.los_vector\n",
     "        simulated_interferogram = (ux * los_vector_calc[0]) + \\\n",
     "                                  (uy * los_vector_calc[1]) + \\\n",
     "                                  (uz * los_vector_calc[2])\n",
     "        return simulated_interferogram\n",
     "    \n",
-    "    @staticmethod\n",
-    "    def _generate_dem_error(dem_patch, std=5.0):\n",
-    "        smoothed_dem = gaussian_filter(dem_patch, sigma=std)\n",
-    "        roughness = dem_patch - smoothed_dem\n",
-    "\n",
-    "        zero_mean_roughness = roughness - roughness.mean()\n",
-    "\n",
-    "        roughness_std = zero_mean_roughness.std()\n",
-    "        if roughness_std > 1e-9:\n",
-    "            normalized_roughness = zero_mean_roughness / roughness_std\n",
-    "        else:\n",
-    "            normalized_roughness = zero_mean_roughness\n",
-    "        dem_error = normalized_roughness * std\n",
-    "        return dem_error\n",
-    "\n",
-    "    def generate_topographic_noise(self, dem_patch):\n",
-    "        delta_h_map = self._generate_dem_error(dem_patch, std=5.0)\n",
-    "\n",
-    "        b_perp = np.random.choice(self.baselines)\n",
-    "        SLANT_RANGE = 850000\n",
-    "        incidence_angle_rad = np.deg2rad(self.incidence_angle_deg)\n",
-    "        numerator = -4 * np.pi * b_perp\n",
-    "        denominator = self.wavelength * SLANT_RANGE * np.sin(incidence_angle_rad)\n",
-    "        \n",
-    "        if abs(denominator) < 1e-9:\n",
-    "            return np.zeros(self.size)\n",
-    "\n",
-    "        topo_phase_noise = (numerator / denominator) * delta_h_map\n",
-    "        return topo_phase_noise\n",
-    "\n",
-    "    def get_times(self):\n",
-    "        if self.total_days < 1 or self.interval_days <=0:\n",
-    "             return np.array([1.0])\n",
-    "        return np.arange(1, self.total_days + 1, self.interval_days)\n",
-    "\n",
     "    def _get_clean_subsidence_image(self, t):\n",
-    "        delta_P_final = -self.S_max * ((np.pi * self.D**2) / (self.cm * (1 - self.nu) * self.V))\n",
     "        current_time_factor = 0.0\n",
     "        if callable(self.f_t):\n",
     "            if len(self.times) > 0:\n",
@@ -169,8 +100,35 @@
     "                current_time_factor = t / self.total_time if self.total_time > 0 else 0\n",
     "        else: \n",
     "            current_time_factor = t / self.total_time if self.total_time > 0 else 0\n",
-    "        delta_P_current = -delta_P_final * current_time_factor\n",
+    "        delta_P_current = -self.delta_P_final * current_time_factor\n",
     "        return self.generate_subsidence(delta_P=delta_P_current)\n",
+    "\n",
+    "    def generate_random_noise(self):\n",
+    "        return np.random.normal(loc=0.0, scale=self.random_noise_std, size=self.size)\n",
+    "\n",
+    "    def generate_tropospheric_noise(self):\n",
+    "        noise = np.fft.fft2(np.random.randn(*self.size))\n",
+    "        frac_noise = np.fft.ifft2(noise * self.power_array).real\n",
+    "        std_val = frac_noise.std()\n",
+    "        if std_val > 1e-9:\n",
+    "            frac_noise = (frac_noise - frac_noise.mean()) / std_val\n",
+    "        else:\n",
+    "            frac_noise = frac_noise - frac_noise.mean()\n",
+    "        return frac_noise * self.tropospheric_noise_scale\n",
+    "\n",
+    "    def generate_topographic_noise(self, dem_patch):\n",
+    "        delta_h_map = Noise2NoiseDataset._generate_dem_error(dem_patch, std=5.0)\n",
+    "        b_perp = np.random.choice(self.baselines)\n",
+    "        numerator = -4 * np.pi * b_perp\n",
+    "        if abs(self.topographic_denominator) < 1e-9:\n",
+    "            return np.zeros(self.size)\n",
+    "        topo_phase_noise = (numerator / self.topographic_denominator) * delta_h_map\n",
+    "        return topo_phase_noise\n",
+    "\n",
+    "    def get_times(self):\n",
+    "        if self.total_days < 1 or self.interval_days <=0:\n",
+    "             return np.array([1.0])\n",
+    "        return np.arange(1, self.total_days + 1, self.interval_days)\n",
     "\n",
     "    def _get_orbit_geometry(self):\n",
     "        if self.orbit_type == 'ascending': return 40, 15\n",
@@ -206,7 +164,51 @@
     "        noisy_image1_tensor = torch.from_numpy(noisy_image1.copy()).float().unsqueeze(0)\n",
     "        noisy_image2_tensor = torch.from_numpy(noisy_image2.copy()).float().unsqueeze(0)\n",
     "        return noisy_image1_tensor, noisy_image2_tensor, clean_image_tensor\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _generate_subsidence_constants(size, D):\n",
+    "        y, x = np.indices(size)\n",
+    "        cx, cy = size[1] // 2, size[0] // 2\n",
+    "        r_sq = (x - cx)**2 + (y - cy)**2\n",
+    "        r = np.sqrt(r_sq)\n",
+    "        denominator_base = r**2 + D**2\n",
+    "        denominator_base[denominator_base < 1e-9] = 1e-9\n",
+    "        azimuth = np.arctan2(y - cy, x - cx)\n",
+    "        return r, denominator_base, azimuth\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _calculate_los_vector(incidence_angle_deg, satellite_azimuth_deg):\n",
+    "        incidence_angle_rad = np.deg2rad(incidence_angle_deg)\n",
+    "        satellite_azimuth_rad = np.deg2rad(satellite_azimuth_deg)\n",
+    "        look_azimuth_rad = satellite_azimuth_rad + np.pi/2\n",
+    "        l_east = np.sin(incidence_angle_rad) * np.sin(look_azimuth_rad)\n",
+    "        l_north = np.sin(incidence_angle_rad) * np.cos(look_azimuth_rad)\n",
+    "        l_up = np.cos(incidence_angle_rad)\n",
+    "        return np.array([l_east, l_north, l_up])\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _calculate_power_array(size, beta):\n",
+    "        ky = np.fft.fftfreq(size[0])\n",
+    "        kx = np.fft.fftfreq(size[1])\n",
+    "        kx, ky = np.meshgrid(kx, ky)\n",
+    "        k = np.sqrt(kx**2 + ky**2)\n",
+    "        k[0, 0] = 1e-7\n",
+    "        power = k ** (-beta)\n",
+    "        return power\n",
     "\n",
+    "    @staticmethod\n",
+    "    def _generate_dem_error(dem_patch, std=5.0):\n",
+    "        smoothed_dem = gaussian_filter(dem_patch, sigma=std)\n",
+    "        roughness = dem_patch - smoothed_dem\n",
+    "        zero_mean_roughness = roughness - roughness.mean()\n",
+    "        roughness_std = zero_mean_roughness.std()\n",
+    "        if roughness_std > 1e-9:\n",
+    "            normalized_roughness = zero_mean_roughness / roughness_std\n",
+    "        else:\n",
+    "            normalized_roughness = zero_mean_roughness\n",
+    "        dem_error = normalized_roughness * std\n",
+    "        return dem_error\n",
+    "        \n",
     "def f_linear(t, times_array, total_time_val):\n",
     "    if total_time_val == 0: return 0\n",
     "    return t / total_time_val\n",
@@ -263,7 +265,30 @@
       "Finished generating for config: lin_asc_16_p2. Total samples so far: 90\n",
       "Generating data for config: lin_desc_16_p2\n",
       "Saved sample 100...\n",
-      "Saved sample 110...\n"
+      "Saved sample 110...\n",
+      "Saved sample 120...\n",
+      "Finished generating for config: lin_desc_16_p2. Total samples so far: 120\n",
+      "Generating data for config: log_asc_16_s1\n",
+      "Saved sample 130...\n",
+      "Saved sample 140...\n",
+      "Saved sample 150...\n",
+      "Finished generating for config: log_asc_16_s1. Total samples so far: 150\n",
+      "Generating data for config: log_desc_16_s1\n",
+      "Saved sample 160...\n",
+      "Saved sample 170...\n",
+      "Saved sample 180...\n",
+      "Finished generating for config: log_desc_16_s1. Total samples so far: 180\n",
+      "Generating data for config: log_asc_16_p2\n",
+      "Saved sample 190...\n",
+      "Saved sample 200...\n",
+      "Saved sample 210...\n",
+      "Finished generating for config: log_asc_16_p2. Total samples so far: 210\n",
+      "Generating data for config: log_desc_16_p2\n",
+      "Saved sample 220...\n",
+      "Saved sample 230...\n",
+      "Saved sample 240...\n",
+      "Finished generating for config: log_desc_16_p2. Total samples so far: 240\n",
+      "Data generation complete. Total samples: 240. Manifest saved to Datasets/TopographicData\\manifest.csv\n"
      ]
     }
    ],
