Updating with subsidence signal documentation

--- a/InSAR_SyntheticData_Documentation.ipynb
+++ b/InSAR_SyntheticData_Documentation.ipynb
@@ -160,8 +160,7 @@
     "\n",
     "test_gaus = generate_random_noise(size)\n",
     "plt.imshow(k, cmap='bwr')\n",
-    "plt.colorbar()\n",
-    "\n"
+    "plt.colorbar()"
    ]
   },
   {
@@ -344,7 +343,7 @@
    "id": "b1eb7c30-6e37-47a4-a16a-066eaf0a98b5",
    "metadata": {},
    "source": [
-    "# 3. Simulating Subsidence Signal"
+    "# 4. Simulating Subsidence Signal"
    ]
   },
   {
@@ -358,10 +357,97 @@
     "\n",
     "$u_{z}(r, 0) = -\\frac{1}{\\pi c_m (1 - v)} \\frac{D}{(r^2 + D^2)^\\frac{3}{2}} \\Delta P_p V$\n",
     "\n",
-    "We are simulating this for a single satellite, so we need to calculate the line-of-sight unit vector to project this calculation on a 2d image. The parameters needed for this are the incidence angle and azimuth angle of the satellite. For now, we assume an azimuth angle of 0 degrees and an incidence angle of 40 degrees. \n",
+    "A few parameters not listed in this formula are the azimuth angle, incidence angle, and time. We want the calculate this as the change of $\\Delta P_p$ over time. \n",
     "\n",
-    "Furthermore, because we plan to train the model over a single location with time-series data, we need to adjust our $\\Delta P$ (pore pressure) parameter over time.\n",
-    "\n"
+    "Furthermore, to properly project the 3d change onto a 2d space, we need to know the incidence and azimuth angles of the satellite. For now we can assume an ascending satellite although in the class custom angle combinations can be set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23c44318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters for the subsidence signal calculation\n",
+    "D=50, \n",
+    "nu=0.25, \n",
+    "cm=1.0, \n",
+    "V=1.0, \n",
+    "\n",
+    "# Assume ascending satellite with the following parameters\n",
+    "incidence_angle_deg=40, \n",
+    "satellite_azimuth_deg=15\n",
+    "\n",
+    "# Calculate the radius and center of the image\n",
+    "y, x = np.indices(size)\n",
+    "cx, cy = size[1] // 2, size[0] // 2\n",
+    "r_sq = (x - cx)**2 + (y - cy)**2\n",
+    "r = np.sqrt(r_sq)\n",
+    "azimuth = np.arctan2(y - cy, x - cx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "446ecd88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "self.r, self.subsidence_denominator, self.azimuth = Noise2NoiseDataset._generate_subsidence_constants(size, D)\n",
+    "\n",
+    "@staticmethod\n",
+    "def _generate_subsidence_constants(size, D):\n",
+    "    y, x = np.indices(size)\n",
+    "    cx, cy = size[1] // 2, size[0] // 2\n",
+    "    r_sq = (x - cx)**2 + (y - cy)**2\n",
+    "    r = np.sqrt(r_sq)\n",
+    "    denominator_base = r**2 + D**2\n",
+    "    denominator_base[denominator_base < 1e-9] = 1e-9\n",
+    "    azimuth = np.arctan2(y - cy, x - cx)\n",
+    "    return r, denominator_base, azimuth\n",
+    "\n",
+    "@staticmethod\n",
+    "def _calculate_los_vector(incidence_angle_deg, satellite_azimuth_deg):\n",
+    "    incidence_angle_rad = np.deg2rad(incidence_angle_deg)\n",
+    "    satellite_azimuth_rad = np.deg2rad(satellite_azimuth_deg)\n",
+    "    look_azimuth_rad = satellite_azimuth_rad + np.pi/2\n",
+    "    l_east = np.sin(incidence_angle_rad) * np.sin(look_azimuth_rad)\n",
+    "    l_north = np.sin(incidence_angle_rad) * np.cos(look_azimuth_rad)\n",
+    "    l_up = np.cos(incidence_angle_rad)\n",
+    "    return np.array([l_east, l_north, l_up])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5ea9dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_subsidence(self, delta_P):\n",
+    "    factor = (-1 / np.pi) * self.cm * (1 - self.nu) * delta_P * self.V\n",
+    "    uz = factor * (self.D / (self.subsidence_denominator**1.5))\n",
+    "    ur = factor * (self.r / (self.subsidence_denominator**1.5))\n",
+    "    ux = ur * np.cos(self.azimuth)\n",
+    "    uy = ur * np.sin(self.azimuth)\n",
+    "    los_vector_calc = self.los_vector\n",
+    "    simulated_interferogram = (ux * los_vector_calc[0]) + \\\n",
+    "                                (uy * los_vector_calc[1]) + \\\n",
+    "                                (uz * los_vector_calc[2])\n",
+    "    return simulated_interferogram\n",
+    "\n",
+    "def _get_clean_subsidence_image(self, t):\n",
+    "    current_time_factor = 0.0\n",
+    "    if callable(self.f_t):\n",
+    "        if len(self.times) > 0:\n",
+    "            current_time_factor = self.f_t(t, self.times, self.total_time)\n",
+    "        else:\n",
+    "            current_time_factor = t / self.total_time if self.total_time > 0 else 0\n",
+    "    else: \n",
+    "        current_time_factor = t / self.total_time if self.total_time > 0 else 0\n",
+    "    delta_P_current = -self.delta_P_final * current_time_factor\n",
+    "    return self.generate_subsidence(delta_P=delta_P_current)"
    ]
   },
   {
