Updating class definitions in notebook

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "class Noise2NoiseDataset(Dataset):\n",
+    "class InSARSyntheticData(Dataset):\n",
     "    def __init__(self, size, full_dem, baselines, wavelength, S_max=5.0, D=50, nu=0.25, cm=1.0, V=1.0,\n",
     "                 random_noise_std=0.56, tropospheric_noise_beta=1.82, tropospheric_noise_scale=1.0,\n",
     "                 total_days=1460, interval_days=49, f_t=-1, orbit_type='ascending'):\n",
@@ -48,7 +48,7 @@
     "        self.interval_days = interval_days\n",
     "        self.orbit_type = orbit_type\n",
     "        self.incidence_angle_deg, self.satellite_azimuth_deg = self._get_orbit_geometry()\n",
-    "        self.los_vector = Noise2NoiseDataset.calculate_los_vector(self.incidence_angle_deg, self.satellite_azimuth_deg)\n",
+    "        self.los_vector = InSARSyntheticData.calculate_los_vector(self.incidence_angle_deg, self.satellite_azimuth_deg)\n",
     "        self.times = self.get_times()\n",
     "\n",
     "        # Subsidence Parameters\n",
@@ -58,7 +58,7 @@
     "        self.cm = cm\n",
     "        self.V = V\n",
     "        self.delta_P_final = -self.S_max * ((np.pi * self.D**2) / (self.cm * (1 - self.nu) * self.V))\n",
-    "        self.r, self.subsidence_denominator, self.azimuth = Noise2NoiseDataset._generate_subsidence_constants(size, D)\n",
+    "        self.r, self.subsidence_denominator, self.azimuth = InSARSyntheticData._generate_subsidence_constants(size, D)\n",
     "        self.f_t = f_t\n",
     "\n",
     "        # Guassian noise parameters\n",
@@ -67,7 +67,7 @@
     "        # Tropospheric noise parameters\n",
     "        self.tropospheric_noise_beta = tropospheric_noise_beta\n",
     "        self.tropospheric_noise_scale = tropospheric_noise_scale\n",
-    "        self.power_array = Noise2NoiseDataset._calculate_power_array(size, tropospheric_noise_beta)\n",
+    "        self.power_array = InSARSyntheticData._calculate_power_array(size, tropospheric_noise_beta)\n",
     "\n",
     "        # Topographic noise parameters\n",
     "        self.baselines = baselines\n",
@@ -117,7 +117,7 @@
     "        return frac_noise * self.tropospheric_noise_scale\n",
     "\n",
     "    def generate_topographic_noise(self, dem_patch):\n",
-    "        delta_h_map = Noise2NoiseDataset._generate_dem_error(dem_patch, std=5.0)\n",
+    "        delta_h_map = InSARSyntheticData._generate_dem_error(dem_patch, std=5.0)\n",
     "        b_perp = np.random.choice(self.baselines)\n",
     "        numerator = -4 * np.pi * b_perp\n",
     "        if abs(self.topographic_denominator) < 1e-9:\n",
