Finished Dataset documentation notebook

--- a/InSARDatasetGeneration.ipynb
+++ b/InSARDatasetGeneration.ipynb
@@ -360,7 +360,7 @@
     "\n",
     "    for config in dataset_configs:\n",
     "        print(f\"Generating data for config: {config['name']}\")\n",
-    "        gen_dataset = Noise2NoiseDataset(\n",
+    "        gen_dataset = InSARSyntheticData(\n",
     "            size=IMG_SIZE, S_max=S_MAX, D=D_DEPTH, nu=NU, cm=CM, V=V_PARAM,\n",
     "            random_noise_std=RANDOM_NOISE_STD, tropospheric_noise_beta=TROPOSPHERIC_NOISE_BETA,\n",
     "            tropospheric_noise_scale=TROPOSPHERIC_NOISE_SCALE, total_days=TOTAL_DAYS,\n",
